# gh-readme-gen

./: AGENTS.md  Cargo.toml
src/: github.rs  main.rs  template.rs
